--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ auto: true
 markdown: rdiscount
 pygments: true
 paginate: 8
-redcarpet:
-  extensions: ["fenced_code_blocks"]
+fenced_code_blocks: true
