--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 baseurl: /wiyt.github.io
-auto: true
 pygments: true
-paginate: 8
 markdown: redcarpet
 redcarpet:
-  extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
+  extensions:
+    - hard_wrap
+    - no_intra_emphasis
+    - autolink
+    - strikethrough
+    - fenced_code_blocks
